<resources>

    <string name="app_name">我是007</string>
    <string name="recommend">推荐</string>
    <string name="live">live</string>
    <string name="game">game</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>
    <string name="dynamic">动态</string>
    <string name="go_buy">去购买</string>
    <string name="cancel">取消</string>
    <string name="loading">加载中</string>
    
    <string name="check_update_dialog_title">需要更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍后更新</string>
    
    <string name="content_detail">图文详情</string>

    <string name="pd_collect">关注</string>
    <string name="pd_collected">已关注</string>
    <string name="pd_add2car">去购买</string>
    
    <!-- 微信related -->
    <string name="wx_share_to">分享到</string>
    <string name="wx_share_to_friends">微信好友</string>
    <string name="wx_share_to_friends_circle">微信朋友圈</string>
    <string name="my_personal_more">更多</string>
    
    <!-- 插件related -->
    <string name="baibaoxiang">百宝箱</string>
</resources>
