<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" >
    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/divider_blue_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/recomment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >
            
            <FrameLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:id="@+id/recomment_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_recommend_btn" />
                
                <ImageView
                    android:id="@+id/recomment_img_selected"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_recommend_selected_btn" />
            </FrameLayout>

            <TextView
                android:id="@+id/recommend_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/find"
                android:textColor="@color/panel_title_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/live_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >
            
            <FrameLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:id="@+id/live_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_lives_btn" />
                
                <ImageView
                    android:id="@+id/live_img_selected"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_lives_selected_btn" />
            </FrameLayout>

            <TextView
                android:id="@+id/live_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dynamic"
                android:textColor="@color/panel_title_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/game_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >
            
            <FrameLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:id="@+id/game_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_games_btn" />
                
                <ImageView
                    android:id="@+id/game_img_selected"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_games_selected_btn" />
            </FrameLayout>

            <TextView
                android:id="@+id/game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/baibaoxiang"
                android:textColor="@color/panel_title_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >
            
            <FrameLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:id="@+id/account_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_account" />
                
                <ImageView
                    android:id="@+id/account_img_selected"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/main_activity_bottom_panel_account_selected" />
            </FrameLayout>

            <TextView
                android:id="@+id/account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine"
                android:textColor="@color/panel_title_color"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>